// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > matches snapshots > changes variant 1`] = `
<DocumentFragment>
  <button
    class="sc-kLhKbu sc-ixGGxD ccUbiV iksruy aje-btn aje-btn--secondary is-auto"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshots > loading completed state 1`] = `
<DocumentFragment>
  <button
    class="sc-kLhKbu sc-ixGGxD ccUbiV iksruy aje-btn aje-btn--primary is-auto"
    data-loading="true"
    type="button"
  >
    <div
      class="sc-gtLWhw bXaYmu aje-loader aje-loader--spinner is-medium"
      data-placement="absolute center"
    >
      <span
        class="sc-fAUdSK cZeRYh aje-checkmark is-medium"
        data-testid="checkmark"
      />
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshots > loading state 1`] = `
<DocumentFragment>
  <button
    class="sc-kLhKbu sc-ixGGxD ccUbiV iksruy aje-btn aje-btn--primary is-auto"
    data-loading="true"
    type="button"
  >
    <div
      class="sc-gtLWhw bXaYmu aje-loader aje-loader--spinner is-medium"
      data-placement="absolute center"
    >
      <div
        class="sc-blHHSb kbTQCs aje-flex"
      >
        <div
          class="sc-dntaoT khvDeC aje-spinner is-medium"
        >
          <svg
            class="sc-ivxoEo giFHLS"
            data-testid="spinner-svg"
            viewBox="25 25 50 50"
          >
            <circle
              class="sc-ghWlax fFBlpc"
              cx="50"
              cy="50"
              fill="none"
              r="20"
              stroke-width="0.5em"
            />
          </svg>
        </div>
      </div>
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshots > normal display 1`] = `
<DocumentFragment>
  <button
    class="sc-kLhKbu sc-ixGGxD ccUbiV iksruy aje-btn aje-btn--primary is-auto"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;
